Fix warnings, deprecations, etc.